objects/Project_Team_Member__c.object
<CustomObject><fields>
        <fullName>Duplicate_Team_Member__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Hidden Field to validate that the Project Team Member only can be added once</description>
        <label>Duplicate Team Member</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>My_Team_Project__c</fullName>
        <formula>Resource__r.ManagerId  = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team Project</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipName>Project_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Requester_Email__c</fullName>
        <description>Email - to be used in body of email templates for email alerts from Project Team Member workflow.</description>
        <formula>Requester__r.Email</formula>
        <label>Requester Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Requester_Phone__c</fullName>
        <description>Cross-obj formula to put the requester phone on the Project Team record so it can be included in the email assignment sent via workflow (not on page layout).</description>
        <formula>Requester__r.Phone</formula>
        <label>Requester Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from the Project record to be used in Project Team Member Workflow Email Alerts</description>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Resource_Phone__c</fullName>
        <description>Cross obj formula to put Resource Phone on Project Team Member record to be used in workflow email alerts (not on page layout)</description>
        <formula>Resource__r.Phone</formula>
        <label>Resource Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This object is for AE / PE Resource Requests and Tracking (User Story: 317488)</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Project Team Member</label><nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Project Team ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Project Team Members</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>